I've been working on getting the title, literally a big A, for the answer list. I added CSS to align things correctly

--- a/client/src/QuestionsAndAnswers/style.scss
+++ b/client/src/QuestionsAndAnswers/style.scss
@@ -19,6 +19,22 @@
   font-weight: lighter;
 }
 
+#qa-answerlist-title {
+  font-weight: bold;
+}
+
+.qa-mosthelpful {
+  padding-left: 22px;
+}
+
+.qa-answer-body {
+  padding-left: 18px;
+}
+
+.qa-answer-footer {
+  padding-left: 18px;
+}
+
 //Qustion And Answer
 
 .qa-qna-title {
